--- a/scss/_reset.scss
+++ b/scss/_reset.scss
@@ -1,11 +1,46 @@
 *{
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
-  outline: none;
-  text-decoration: none;
-  list-style: none;
-  border: none;
-  font-size: 16px;
   outline: 0;
+  list-style: none;
+  text-decoration: none;
+  border: 0;
+  -webkit-font-smoothing: antialiased;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  font-size: 16px;
+}
+html{
+  font-size: 62.5%;
+  scroll-behavior: smooth;
+  overflow-x: hidden;
+}
+body{
+  -webkit-font-smoothing: antialiased;
+}
+main{
+  position: relative !important;
+}
+a{
+  display: inline-block;
+}
+svg, img{
+  display: inline-block;
+  max-width: 100%;
+}
+img{
+  -o-object-fit: cover;
+  object-fit: cover;
+}
+button, a{
+  background-color: transparent;
+  border: none;
+  cursor: pointer !important;
+}
+button{
+  cursor: pointer;
+}
+:focus{
+  outline: 0;
+  box-shadow: 0 0 0 2px var(--primary-green);
 }
