Commit: menu and header structure

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,5 +1,7 @@
 :root{
-  // Green Colors
+  // Vital Colors
+  --primary-orange: #FA8543;
+  --primary-brown: #C3BAAC;
 
   // Black Colors
   --black-light:#1A1A1A;
