--- a/scss/_reset.scss
+++ b/scss/_reset.scss
@@ -9,6 +9,7 @@
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
   font-size: 16px;
+  font-family: 'Roboto', sans-serif;
 }
 html{
   font-size: 62.5%;
