--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -3,9 +3,10 @@ header{
   top: 0;
   width: 100%;
   height: 100px;
-  background-color: red;
-  z-index: 2023;
+  background-color: transparent;
+  z-index: 2023 !important;
   @include flex(row, center, center);
+  transition: all .3s;
   .container{
     width: 100%;
     @include flex(row, center, center);
@@ -52,24 +53,104 @@ header{
         }
       }
     }
+    .logo{
+      pointer-events: none;
+      display: none;
+    }
+    // Hambuger configuration from lib
+    .hamburger {
+      display: none;
+      pointer-events: none;
+      &.is-active {
+        .hamburger-inner,
+        .hamburger-inner::before,
+        .hamburger-inner::after {
+          background-color: var(--white);
+        }
+      }
+      .hamburger-inner,
+      .hamburger-inner::before,
+      .hamburger-inner::after {
+        background-color: var(--white);
+        height: 3px;
+      }
+    }
+  }
+  &.changeBackgroundColor {
+    background-color: var(--white);
+    .container{
+      nav{
+        ul{
+          li{
+            a{
+              color: var(--black-dark);
+              &::after{
+                background-color: var(--black-dark);
+              }
+              &:hover{
+                color: var(--black-dark);
+              }
+              &.active{
+                color: var(--black-dark);
+              }
+            }
+          }
+        }
+      }
+    }
   }
   .mobile__menu{
-    position: absolute;
+    position: absolute; // acompanha mesmo com rolagem
+    top: 100px; // size of header nav
+    height: calc(100vh - 100px); // viewport height
     width: 100%;
-    height: 100% !important;
-    top: 96px !important;
-    min-height: calc(100vh - 96px);
-    background-color: var(--white);
-    overflow-x: hidden;
-    padding-bottom: 30px !important;
-    z-index: 9999;
-    // Animation
-    transition: all .3s ease-in-out;
-    overflow-y: auto;
+    background: var(--white);
+    transition: all .3s ease;
+    padding: 4rem 1.5rem;
     opacity: 0;
-    pointer-events: none;
-    .mobile__menu__body{
-
+    transform: translateY(100%);
+    nav{
+      ul{
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        margin-bottom: 4rem;
+        gap: 4rem;
+        li{
+          a{
+            font-weight: 500;
+            font-size: 20px;
+            text-align: center;
+            color: var(--black-dark);
+          }
+        }
+      }
+    }
+  }
+  // Responsive
+  @media (max-width: 768px){
+    .container{
+      @include flex(row, center, space-between);
+      .logo, .hamburger {
+        display: block;
+        pointer-events: all;
+      }
+      .js-nav{
+        display: none;
+        pointer-events: block;
+      }
+    }
+    &.changeBackgroundColor{
+      z-index: 2023 !important;
+      background-color: var(--primary-orange);
+    }
+  }
+}
+.menu-opened{
+  header{
+    .mobile__menu{
+      opacity: 1;
+      transform: translateY(0%);
     }
   }
 }
