--- a/scss/_reset.scss
+++ b/scss/_reset.scss
@@ -14,7 +14,7 @@
 html{
   font-size: 62.5%;
   scroll-behavior: smooth;
-  overflow-x: hidden;
+  overflow-x: hidden !important;
 }
 body{
   -webkit-font-smoothing: antialiased;
