--- a/scss/_page-home.scss
+++ b/scss/_page-home.scss
@@ -62,31 +62,189 @@
     }
   }
 }
-
+// Section Project
 #s__project{
   width: 100%;
   @include flex(row, flex-start, space-between);
   .s__project__left{
     width: 100%;
-    max-width: 600px;
+    height: calc(100vh - 100px) !important;
+    padding: 80px 80px;
+    background: url('../assets/bg/bg-piscina.webp') no-repeat center center;
+    background-size: cover;
+    gap: 40px;
+    @include flex(column, flex-start, flex-start);
+    img{
+      width: 100%;
+      max-width: 250px;
+    }
     span{
-
+      text-transform: uppercase;
+      color: var(--primary-orange);
+      font-size: 3.6rem;
+      font-family: 'Roboto', sans-serif;
+      font-weight: bold;
     }
     p{
-
-    }
-    .btn-quotes{
-
+      font-size: 20px;
+      font-weight: 400;
+      font-family: 'Roboto', sans-serif;
+      line-height: 150%;
+      color: var(--white);
+      width: 100%;
+      max-width: 600px;
+      strong{
+        font-size: 20px;
+        font-weight: 700;
+        font-family: 'Roboto', sans-serif;
+        line-height: 150%;
+      }
     }
   }
   .s__project__right{
     width: 100%;
-    max-width: 500px;
+    max-width: 750px;
     .slides__project{
-
+      .swiper-wrapper{
+        .swiper-slide{
+          width: 100%;
+          min-width: 750px;
+          height: calc(100vh - 100px) !important;
+          img{
+            width: 100%;
+            min-width: 700px;
+            height: calc(100vh - 100px) !important;
+            object-fit: cover !important;
+          }
+        }
+      }
+    }
+  }
+  // Responsive
+  @media(max-width: 1370px){
+    .s__project__left{
+      padding: 80px 50px;
+    }
+    .s__project__right{
+      width: 100%;
+      max-width: 600px;
+    }
+  }
+  @media(max-width: 1100px){
+    .s__project__left{
+      padding: 60px 30px;
+    }
+    .s__project__right{
+      width: 100%;
+      max-width: 500px;
+    }
+  }
+  @media(max-width: 991px){
+    @include flex(column, center, center);
+    scroll-margin-top: 100px;
+    .s__project__left{
+      @include flex(column, center, center);
+      text-align: center;
+      img{
+        max-width: 270px;
+      }
+    }
+    .s__project__right{
+      max-width: 100%;
+      .slides__project{
+        .swiper-wrapper{
+          .swiper-slide{
+            width: 100%;
+            max-width: 100%;
+            height: 500px !important;
+            img{
+              width: 100%;
+              max-width: 100%;
+              height: 500px !important;
+              object-fit: cover !important;
+            }
+          }
+        }
+      }
+    }
+  }
+  @media(max-width: 768px){
+    @include flex(column, center, center);
+    .s__project__left{
+      padding: 40px 30px;
+      gap: 30px;
+      @include flex(column, center, center);
+      text-align: center;
+      span{
+        font-size: 2.8rem;
+      }
+      img{
+        max-width: 220px;
+      }
+    }
+    .s__project__right{
+      max-width: 100%;
+      min-width: 100% !important;
+      .slides__project{
+        .swiper-wrapper{
+          .swiper-slide{
+            width: 100%;
+            max-width: 100%;
+            height: 500px !important;
+            min-width: 100% !important;
+            img{
+              width: 100%;
+              max-width: 100%;
+              height: 500px !important;
+              object-fit: cover !important;
+              min-width: 100% !important;
+            }
+          }
+        }
+      }
+    }
+  }
+  @media(max-width: 576px){
+    @include flex(column, center, center);
+    .s__project__left{
+      padding: 30px;
+      gap: 30px;
+      @include flex(column, center, center);
+      text-align: center;
+      span{
+        font-size: 2.6rem;
+      }
+      p{
+        font-size: 1.6rem;
+        strong{
+          font-size: 1.6rem;
+        }
+      }
+      img{
+        max-width: 200px;
+      }
+    }
+    .s__project__right{
+      max-width: 100%;
+      .slides__project{
+        .swiper-wrapper{
+          .swiper-slide{
+            width: 100%;
+            max-width: 100%;
+            height: 400px !important;
+            img{
+              width: 100%;
+              max-width: 100%;
+              height: 400px !important;
+              object-fit: cover !important;
+            }
+          }
+        }
+      }
     }
   }
 }
+
 #s__info{
   background-color: #9d85f3;
   width: 100%;
