--- a/scss/_page-home.scss
+++ b/scss/_page-home.scss
@@ -65,6 +65,7 @@
 // Section Project
 #s__project{
   width: 100%;
+  height: 100%;
   @include flex(row, flex-start, space-between);
   .s__project__left{
     width: 100%;
@@ -239,6 +240,104 @@
               object-fit: cover !important;
             }
           }
+        }
+      }
+    }
+  }
+}
+// Section Location
+#s__location{
+  width: 100%;
+  background-color: var(--primary-brown);
+  padding: 80px 0px;
+  @include flex(row, center, center);
+  .container{
+    @include flex(row, center, space-between);
+    gap: 30px;
+    .s__location__title{
+      width: 100%;
+      max-width: 400px;
+      .s__location__span{
+        border-radius: 5px;
+        background-color: var(--white);
+        width: 100%;
+        max-width: 180px;
+        padding: 12px 30px;
+        span{
+          color: var(--primary-orange);
+          text-transform: uppercase;
+          font-size: 1.8rem;
+          font-weight: 700;
+        }
+      }
+      h3{
+        margin-top: 40px;
+        margin-bottom: 30px;
+        font-size: 3.6rem;
+      }
+      p{
+        font-size: 20px;
+        font-weight: 400;
+        font-family: 'Roboto', sans-serif;
+        line-height: 150%;
+      }
+      .btn-quotes{
+        margin-top: 30px;
+        max-width: 300px;
+      }
+    }
+    .s__location__video{
+      width: 660px;
+      height: 371px;
+      iframe{
+        border-radius: 20px;
+      }
+    }
+  }
+  // Responsive
+  @media (max-width: 1150px){
+    .container{
+      .s__location__video{
+        width: 100%;
+        max-width: 500px;
+        iframe{
+          width: 100%;
+          max-width: 500px;
+        }
+      }
+    }
+  }
+  @media (max-width: 991px){
+    .container{
+      @include flex(column, center, center);
+      gap: 40px;
+      text-align: center;
+      .s__location__title{
+        @include flex(column, center, center);
+      }
+      .s__location__video{
+        width: 100%;
+        max-width: 100%;
+        iframe{
+          width: 100%;
+          max-width: 100%;
+        }
+      }
+    }
+  }
+  @media (max-width: 768px){
+    .container{
+      .s__location__title{
+        .s__location__span{
+          span{
+            font-size: 1.6rem;
+          }
+        }
+        h3{
+          font-size: 2.8rem;
+        }
+        p{
+          font-size: 1.6rem;
         }
       }
     }
