--- a/scss/_page-home.scss
+++ b/scss/_page-home.scss
@@ -119,6 +119,12 @@
           object-fit: cover !important;
         }
       }
+      .f-carousel__nav{
+        @include flex(row, center, space-between);
+        .f-button{
+          background-color: white;
+        }
+      }
     }
   }
   // Responsive
