--- a/scss/_page-home.scss
+++ b/scss/_page-home.scss
@@ -107,7 +107,6 @@
     max-width: 750px;
     #carouselProjeto{
       --f-carousel-slide-height: 100vh;
-      --f-carousel-spacing: 10px;
       .f-carousel__slide{
         width: 100%;
         min-width: 750px;
@@ -143,7 +142,7 @@
     }
     .s__project__right{
       width: 100%;
-      max-width: 500px;
+      max-width: 100%;
     }
   }
   @media(max-width: 991px){
@@ -156,21 +155,19 @@
         max-width: 270px;
       }
     }
-    .s__project__right{
+    #carouselProjeto{
       max-width: 100%;
-      .slides__project{
-        .swiper-wrapper{
-          .swiper-slide{
-            width: 100%;
-            max-width: 100%;
-            height: 500px !important;
-            img{
-              width: 100%;
-              max-width: 100%;
-              height: 500px !important;
-              object-fit: cover !important;
-            }
-          }
+      --f-carousel-slide-height: 500px;
+      --f-carousel-spacing: 10px;
+      .f-carousel__slide{
+        width: 100%;
+        min-width: 750px;
+        height: 500px !important;
+        img{
+          width: 100%;
+          min-width: 700px;
+          height: 500px;
+          object-fit: cover !important;
         }
       }
     }
@@ -187,27 +184,6 @@
       }
       img{
         max-width: 220px;
-      }
-    }
-    .s__project__right{
-      max-width: 100%;
-      min-width: 100% !important;
-      .slides__project{
-        .swiper-wrapper{
-          .swiper-slide{
-            width: 100%;
-            max-width: 100%;
-            height: 500px !important;
-            min-width: 100% !important;
-            img{
-              width: 100%;
-              max-width: 100%;
-              height: 500px !important;
-              object-fit: cover !important;
-              min-width: 100% !important;
-            }
-          }
-        }
       }
     }
   }
@@ -229,24 +205,6 @@
       }
       img{
         max-width: 200px;
-      }
-    }
-    .s__project__right{
-      max-width: 100%;
-      .slides__project{
-        .swiper-wrapper{
-          .swiper-slide{
-            width: 100%;
-            max-width: 100%;
-            height: 400px !important;
-            img{
-              width: 100%;
-              max-width: 100%;
-              height: 400px !important;
-              object-fit: cover !important;
-            }
-          }
-        }
       }
     }
   }
