--- a/scss/_page-home.scss
+++ b/scss/_page-home.scss
@@ -426,6 +426,8 @@
     }
   }
   @media (max-width: 991px){
+    height: 100%;
+    padding: 60px 0px;
     .container{
       gap: 60px;
       @include flex(column-reverse, center, center);
@@ -451,7 +453,6 @@
     }
   }
   @media (max-width: 576px){
-    height: 100%;
     padding: 40px 0px;
     .container{
       gap: 40px;
@@ -531,6 +532,46 @@
       }
     }
   }
+  // Responsive
+  @media (max-width: 991px){
+    .container{
+      .s__planta__slide{
+        #carouselPlanta{
+          .f-carousel__slide{
+            .slide__text{
+              margin-top: -50px;
+            }
+          }
+        }
+      }
+    }
+  }
+  @media (max-width: 768px){
+    .container{
+      .s__planta__slide{
+        #carouselPlanta{
+          .f-carousel__slide{
+            img{
+              max-width: 500px;
+            }
+            .slide__text{
+              @include flex(column, center, center);
+              margin: 0 auto;
+              text-align: center;
+              margin-top: 60px;
+            }
+          }
+          .f-carousel__nav{
+            .f-button{
+              width: 40px;
+              height: 40px;
+            }
+          }
+        }
+      }
+    }
+  }
+
 }
 #s__perspectiva{
   background-color: #2E3B4D;
