--- a/scss/_page-home.scss
+++ b/scss/_page-home.scss
@@ -1,3 +1,6 @@
+@import './variables';
+
+
 .section{
   width: 100%;
   height: calc(100vh - 9.6rem);
@@ -36,3 +39,5 @@
   width: 100%;
   height: calc(100vh - 9.6rem);
 }
+
+
