--- a/scss/_page-home.scss
+++ b/scss/_page-home.scss
@@ -781,7 +781,7 @@
 
   .container {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     flex-direction: row;
     gap: 10rem;
@@ -790,7 +790,7 @@
 
     .left {
       text-align: justify;
-      width: 50%;
+      width: 70%;
       display: flex;
       flex-direction: column;
       gap: 30px;
