--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -2,6 +2,7 @@
   // Vital Colors
   --primary-orange: #FA8543;
   --primary-brown: #C3BAAC;
+  --primary-yellow: #FFDC00;
 
   // Black Colors
   --black-light: #1A1A1A;
