--- a/scss/_page-home.scss
+++ b/scss/_page-home.scss
@@ -800,7 +800,7 @@
       }
 
       p {
-        font-size: 1.2rem;
+        font-size: 1.6rem;
       }
 
     }
@@ -824,7 +824,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: url('../assets/bg/bg-fachadaenjoy.png');
+  background-image: url('../assets/bg/bg_fachada.png');
   background-size: cover;
   background-position: center;
   opacity: 0.2;
@@ -878,14 +878,11 @@
       }
 
 
-      .video {
-        position: absolute;
-        margin-left: 550px;
-        border-radius: 20px;
-
+      .s__location__video {
+        width: 1060px;
+        height: 371px;
+  
         iframe {
-          width: 500px;
-          height: auto;
           border-radius: 20px;
         }
       }
