Revert "Pedro changes"

--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -5,9 +5,9 @@ footer {
     .container {
         width: 100%;
         display: flex;
-        justify-content: space-between;
+        justify-content: space-around;
         align-items: center;
-        padding: 5rem 0;
+        padding: 5rem;
         .left,
         .center,
         .right {
