--- a/scss/_page-home.scss
+++ b/scss/_page-home.scss
@@ -361,9 +361,11 @@
       .s__info__title__list{
         display: grid;
         grid-template-columns: 1fr 1fr;
-        grid-gap: 30px 80px;
+        grid-gap: 30px 60px;
         width: 100%;
-        max-width: 560px;
+        align-items: flex-start;
+        justify-content: flex-start;
+        justify-items: flex-start;
         li{
           @include flex(row, flex-start, center);
           gap: 30px;
