--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -2,60 +2,40 @@
 
 footer {
     background-color: var(--black-light);
+    padding: 60px 0px;
     .container {
         width: 100%;
-        display: flex;
-        justify-content: space-around;
-        align-items: center;
-        padding: 5rem;
-        .left,
-        .center,
-        .right {
-            width: 300px;
-            height: 200px;
-            h1 {
-                font-size: 20px;
-                color: var(--white);
-            }
-        }
-        .center,
-        .right {
-            display: flex;
-            flex-direction: column;
-            gap: 30px;
-            color: var(--white);
-            ul {
-                li {
-                    list-style: none;
-                    gap: 30px;
-                    a {
-                        font-size: 1.2rem;
-                        color: var(--white);
-                        text-decoration: none;
-                    }
-                }
-            }
-        }
-        .left {
-
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            img {
-                width: 150px;
-                height: auto;
-            }
-        }
-        .right {
-            .icons {
-                width: 100%;
-                justify-content: center;
-                display: flex;
-                gap: 20px;
-                a {
+        @include flex(row, flex-start, space-between);
+        .s__footer__nav{
+            width: 100%;
+            max-width: 800px;
+            @include flex(row, flex-start, space-between);
+            gap: 50px;
+            .s__footer__nav__center{
+                h3{
+                    font-size: 20px;
                     color: var(--white);
-                    i {
-                        font-size: 2rem;
+                    font-family: 'Roboto', sans-serif;
+                    margin-bottom: 20px;
+                    font-weight: 500;
+                }
+                ul{
+                    @include flex(column, flex-start, flex-start);
+                    gap: 15px;
+                    li{
+                        font-size: 16px;
+                        color: var(--gray-200);
+                        font-family: 'Roboto', sans-serif;
+                        font-weight: 500;
+                        a{
+                            font-size: 16px;
+                            color: var(--gray-200);
+                            font-family: 'Roboto', sans-serif;
+                            font-weight: 500;
+                            &:hover{
+                                text-decoration: underline;
+                            }
+                        }
                     }
                 }
             }
