--- a/scss/_page-home.scss
+++ b/scss/_page-home.scss
@@ -296,6 +296,7 @@
     }
   }
   @media (max-width: 768px){
+    height: 100%;
     .container{
       .s__location__title{
         .s__location__span{
@@ -488,17 +489,18 @@
         }
       }
       .s__info__title{
-        @include flex(column, center, center);
         .s__info__logo{
           max-width: 200px;
         }
         .s__info__title__list{
-          @include flex(column, center, center);
-          grid-template-columns: 1fr;
-          grid-gap: 20px;
+          @include flex(column, flex-start, flex-start);
           li{
             width: 100%;
-            max-width: 300px;
+            max-width: 100%;
+            @include flex(row, flex-start, flex-start);
+            div{
+              @include flex(column, flex-start, flex-start);
+            }
           }
         }
       }
@@ -792,8 +794,120 @@
   background-color: var(--primary-orange);
   width: 100%;
   height: calc(100vh - 9.6rem);
+  background-color: var(--primary-orange);
+  color: var(--white);
+  @include flex(row, center, center);
+  .container {
+    width: 100%;
+    height: 80%;
+    align-items: center;
+    display: flex;
+    padding-right: 150px;
+    justify-content: right;
+    .card {
+      position: absolute;
+      width: 450px;
+      height: auto;
+      border-radius: 20px;
+      padding: 20px;
+      left: 420px;
+      margin-top: 190px;
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+      h1 {
+        color: black;
+        font-size: 20px;
+      }
+      p {
+        font-size: 16px;
+      }
+      .depoimentos {
+        color: cadetblue;
+      }
+      .s__location__video {
+        width: 1060px;
+        height: 371px;
+        iframe {
+          border-radius: 20px;
+        }
+      }
+    }
+  }
+}
+#s__realizacao::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url('../assets/bg/bg-fachadaenjoy.png');
+  background-size: cover;
+  background-position: center;
+  opacity: 0.2;
+  /* Ajuste a opacidade conforme necessário */
+  z-index: -1;
 }
 #s__realizacao{
   width: 100%;
   height: calc(100vh - 9.6rem);
+  position: relative;
+  @include flex(row, center, center);
+  overflow: hidden;
+  .container {
+    @include flex(row, center, space-between);
+    gap: 10rem;
+    z-index: 1;
+    /* Para garantir que o conteúdo fique acima da imagem de fundo */
+    .left {
+      text-align: justify;
+      width: 100%;
+      max-width: 850px;
+      display: flex;
+      flex-direction: column;
+      gap: 30px;
+      h1 {
+        font-size: 3.6rem;
+      }
+      p {
+        font-size: 1.8rem;
+      }
+    }
+    .right {
+      width: 100%;
+      max-width: 200px;
+      img {
+        width: 200px;
+        height: auto;
+      }
+    }
+  }
+  // Responsive
+  @media (max-width: 991px){
+    padding: 40px 0px;
+    height: 100%;
+    .container{
+      @include flex(column, center, center);
+      text-align: center;
+      .left{
+        @include flex(column, center, center);
+        text-align: center;
+        h1{
+          font-size: 28px;
+        }
+      }
+    }
+  }
+  @media (max-width: 576px){
+    padding: 40px 0px;
+    height: 100%;
+    .container{
+      .left{
+        h1{
+          font-size: 26px;
+        }
+      }
+    }
+  }
 }
