--- a/scss/_page-home.scss
+++ b/scss/_page-home.scss
@@ -800,36 +800,66 @@
   .container {
     width: 100%;
     height: 80%;
-    align-items: center;
-    display: flex;
-    padding-right: 150px;
-    justify-content: right;
+    @include flex(row, center, flex-end);
+    position: relative;
     .card {
       position: absolute;
-      width: 450px;
+      width: 600px;
       height: auto;
-      border-radius: 20px;
-      padding: 20px;
-      left: 420px;
-      margin-top: 190px;
+      border-radius: 10px;
+      padding: 40px 30px;
+      left: 70px;
+      bottom: 0px;
       display: flex;
       flex-direction: column;
       gap: 10px;
+      background-color: var(--white);
       h1 {
         color: black;
         font-size: 20px;
       }
       p {
-        font-size: 16px;
+        font-size: 18px;
       }
       .depoimentos {
         color: cadetblue;
+        font-weight: 500;
+      }
+    }
+    .s__location__video {
+      iframe {
+        border-radius: 20px;
+      }
+    }
+  }
+  // Responsive
+  @media (max-width: 991px){
+    .container{
+      @include flex(row, center, center);
+      .card{
+        left: 0px;
+        right: 0px;
+        bottom: 0px;
+        margin: 0 auto;
+      }
+    }
+  }
+  @media (max-width: 576px){
+    height: 100%;
+    padding: 30px 0px;
+    .container{
+      @include flex(column-reverse, center, center);
+      gap: 30px;
+      .card{
+        width: 100%;
+        border-radius: 10px;
+        position: relative;
       }
       .s__location__video {
-        width: 1060px;
-        height: 371px;
+        width: 100%;
         iframe {
-          border-radius: 20px;
+          width: 100%;
+          height: 320px;
         }
       }
     }
