--- a/scss/_page-home.scss
+++ b/scss/_page-home.scss
@@ -15,15 +15,19 @@
     padding-top: 250px;
     .s__hero__logo__enjoy{
       padding-bottom: 120px;
+      max-width: 350px;
     }
     .s__hero__logos{
       @include flex(row, center, center);
-      gap: 100px;
+      gap: 60px;
       position: relative;
+      img{
+        width: 200px;
+      }
       &::after{
         content: "";
         top: -10%;
-        left: 48%;
+        left: 50%;
         width: 4px;
         height: 120%;
         background-color: var(--white);
@@ -51,12 +55,14 @@
       padding-top: 150px;
       .s__hero__logo__enjoy{
         width: 100%;
-        max-width: 300px;
+        max-width: 200px;
         padding-bottom: 60px;
       }
       .s__hero__logos{
+        width: 100%;
+        max-width: 150px;
         @include flex(column, center, center);
-        gap: 40px;
+        gap: 20px;
         &::after{
           display: none;
         }
@@ -71,7 +77,7 @@
   @include flex(row, flex-start, space-between);
   .s__project__left{
     width: 100%;
-    height: calc(100vh - 100px) !important;
+    height: 800px !important;
     padding: 80px 80px;
     background: url('../assets/bg/bg-piscina.webp') no-repeat center center;
     background-size: cover;
@@ -112,12 +118,12 @@
       .f-carousel__slide{
         width: 100%;
         min-width: 750px;
-        height: calc(100vh - 100px) !important;
+        height: 800px;
         overflow: hidden;
         img{
           width: 100%;
           min-width: 700px;
-          height: calc(100vh - 100px) !important;
+          height: 800px;
           object-fit: cover !important;
           transition: all .3s;
         }
@@ -226,7 +232,7 @@
     gap: 30px;
     .s__location__title{
       width: 100%;
-      max-width: 400px;
+      max-width: 360px;
       .s__location__span{
         border-radius: 5px;
         background-color: var(--white);
@@ -243,7 +249,7 @@
       h3{
         margin-top: 40px;
         margin-bottom: 30px;
-        font-size: 3.6rem;
+        font-size: 3.2rem;
       }
       p{
         font-size: 20px;
@@ -257,10 +263,9 @@
       }
     }
     .s__location__video{
-      width: 660px;
-      height: 371px;
-      iframe{
-        border-radius: 20px;
+      width: 800px;
+      img{
+        border-radius: 5px;
       }
     }
   }
@@ -318,26 +323,26 @@
 #s__info{
   width: 100%;
   background-color: var(--primary-orange);
-  height: calc(100vh - 100px);
+  padding: 60px 0px;
   @include flex(row, center, center);
   .container{
     @include flex(row, center, space-between);
     gap: 90px;
     .s__info__slide{
       #carouselInformation{
-        --f-carousel-slide-height: 550px;
+        --f-carousel-slide-height: 700px;
         width: 100%;
         max-width: 600px;
         .f-carousel__slide{
           width: 100%;
           min-width: 600px;
-          height: 550px !important;
+          height: 700px !important;
           overflow: hidden;
           transition: all .3s;
           img{
             width: 100%;
             min-width: 600px;
-            height: 550px !important;
+            height: 700px !important;
             object-fit: cover !important;
             transition: all .3s;
             overflow: hidden;
