--- a/scss/_page-home.scss
+++ b/scss/_page-home.scss
@@ -615,11 +615,13 @@
           overflow: hidden;
           height: 100%;
           max-height: 364px;
+          width: 100%;
           img{
             object-fit: cover;
             width: 100%;
             height: 100%;
             max-height: 364px;
+            width: 100%;
             border-top-left-radius: 5px;
             border-top-right-radius: 5px;
             transition: all .3s;
